--- a/Modulo1/Clase3_GitTutorial2.ipynb
+++ b/Modulo1/Clase3_GitTutorial2.ipynb
@@ -200,19 +200,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esto es un texto\n"
+      "Esto es un texto\n",
+      "Cuchara\n"
      ]
     }
    ],
    "source": [
-    "print(\"Esto es un texto\")"
+    "print(\"Esto es un texto\")\n",
+    "print(\"Cuchara\")"
    ]
   },
   {
@@ -611,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
